...
    var showPassword by remember { mutableStateOf(false) }

    Column(
        horizontalAlignment = Alignment.CenterHorizontally,
        modifier = Modifier.fillMaxWidth()
    ) {
        Text(text = "Welcome!")
        OutlinedTextField(
            value = username,
            onValueChange = { username = it },
            label = { Text(text = R.string.username.get()) }
        )
        OutlinedTextField(
...
